# MistrasDTA

./: .gitignore  CITATION.cff  LICENSE  Mistras.py  MistrasDTA.py  README.md  pyproject.toml  setup.py
MistrasDTA/: MistrasDTA.py  __init__.py
